# sharehold

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  requirements.txt
Sharehold/: asgi.py  settings.py  urls.py  wsgi.py
apps/sharehold_app/: apps.py  documents.py  models.py  serializers.py  urls.py  views.py
apps/sharehold_app/migrations/: 0001_initial.py
templates/: index.html
